--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A backend challenge to create insurace risk profiler",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "nslcoder",
   "license": "MIT",
@@ -13,6 +13,7 @@
     "mongoose": "^6.7.2"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20"
   }
 }
