--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "nslcoder",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^6.7.2"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
